# AI_SDLC_Delivery_Accelerator-Evaluator-Agent

./: .env.example  .gitignore  README.md  corrected_evaluation_request.json  pyproject.toml
local-infrastructure/: python-dev-compose.yml  python-dev.env
local-infrastructure/python-init-scripts/: 01-init-databases.sql  02-init-sdlc-backlog-module.sql
local-infrastructure/volumes/: README.md
src/: __init__.py  clients.py  config.py  evaluators.py  main.py  models.py  prompts.py
src/api/: backlog_evaluator_api.py
src/config/: config.py
src/service/: clients.py  evaluation_service.py  evaluators.py  prompts.py
